# zookeeper-operator

./: .envrc  .gitignore  .jujuignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: automatic-doc-checks.yml  ci.yaml  release.yaml  sync_issue_to_jira.yaml  tics_run_sh_ghaction_test.yml
docs/: .custom_wordlist.txt  conf.py  index.md
docs/.sphinx/: .markdownlint.json  .wordlist.dic
docs/content/explanation/: ha.md  index.md
docs/content/how-to/: deploy.md  index.md
docs/content/reference/: index.md
docs/content/tutorial/: cleanup.md  deploy.md  index.md  integrate.md  setup.md  use.md
lib/charms/data_platform_libs/v0/: data_interfaces.py  upgrade.py
lib/charms/grafana_agent/v0/: cos_machine.py
lib/charms/kafka/v0/: kafka_snap.py  zookeeper_provides.py  zookeeper_requires.py
lib/charms/operator_libs_linux/v1/: snap.py
lib/charms/rolling_ops/v0/: rollingops.py
lib/charms/tls_certificates_interface/v0/: tls_certificates.py
lib/charms/tls_certificates_interface/v1/: tls_certificates.py
lib/charms/zookeeper/v0/: client.py  cluster.py  zookeeper_provider.py
src/: charm.py  cluster.py  config.py  kafka_helpers.py  literals.py  provider.py  snap.py  tls.py  upgrade.py  utils.py  workload.py  zookeeper_config.py
src/alert_rules/prometheus/: high_file_descriptors.rule  jmx_missing.rule  jvm_filling.rule  outstanding_requests.rule  zk_avg_lantecy.rule  zookeeper_metrics.rules
src/core/: cluster.py  models.py  structured_config.py  stubs.py  workload.py
src/events/: backup.py  password_actions.py  provider.py  tls.py  upgrade.py
src/grafana_dashboards/: node-exporter-zookeeper.json  zookeeper-metrics.json
src/managers/: backup.py  config.py  k8s.py  quorum.py  tls.py
templates/: zookeeper.properties
tests/integration/: conftest.py  helpers.py  scaling_helpers.py  test_backup.py  test_charm.py  test_network.py  test_password_rotation.py  test_provider.py  test_scaling.py  test_tls.py  test_upgrade.py
tests/integration/app-charm/: metadata.yaml  requirements.txt
tests/integration/app-charm/src/: charm.py
tests/integration/data/: inter.srl
tests/integration/ha/: continuous_writes.py  helpers.py  test_ha.py  test_replication.py  test_scaling.py
tests/integration/keys/: 0.key
tests/interface/: conftest.py  test_inferface.py
tests/keys/: 0.key.enc
tests/unit/: conftest.py  test_backup.py  test_charm.py  test_client.py  test_cluster.py  test_config.py  test_provider.py  test_quorum.py  test_structured_config.py  test_tls.py  test_upgrade.py  test_utils.py  test_workload.py  test_zookeeper_config.py  test_zookeeper_provider.py
tests/unit/scenario/: conftest.py  test_backup.py  test_provider.py
